# book-keeper

./: .env.template  Makefile  README.md  docker-compose.yml
.github/workflows/: nextjs-to-pages.yml  nextjs.yml
backend/: .dockerignore  .env.template  .gitignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml
backend/app/: asgi.py  settings.py  urls.py  wsgi.py
backend/app/apps/: config.py  urls.py
backend/app/apps/author/: filters.py  models.py  serializers.py  urls.py  views.py
backend/app/apps/book/: filters.py  models.py  serializers.py  urls.py  views.py
backend/app/apps/genre/: filters.py  models.py  serializers.py  urls.py  views.py
backend/app/management/commands/: seed_data.py  seeddata.py
backend/app/migrations/: 0001_initial.py
backend/book_keeper/: asgi.py  settings.py  urls.py  wsgi.py
backend/src/: asgi.py  settings.py  urls.py  wsgi.py
backend/src/apps/: config.py  urls.py
backend/src/apps/author/: filters.py  serializers.py  urls.py  views.py
backend/src/apps/book/: filters.py  models.py  serializers.py  urls.py  views.py
backend/src/apps/genre/: filters.py  serializers.py  urls.py  views.py
backend/src/management/commands/: seeddata.py
backend/src/migrations/: 0001_initial.py
frontend/: .env.template  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/new/: page.tsx
frontend/src/components/ui/: button.tsx  calendar.tsx  card.tsx  command.tsx  dialog.tsx  (+7 more)
frontend/src/lib/: capitalize.ts
frontend/src/styles/: globals.css
(+69 files in other folders)
