[tool.poetry]
name = "book-keeper"
version = "0.1.0"
description = "Take home assignment for an inventory management application for books"
authors = ["Xin Wen Yap <yapxinwen19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
