[tool.poetry]
name = "book-keeper"
version = "0.1.0"
description = "Take home assignment for an inventory management application for books"
authors = ["Xin Wen Yap <yapxinwen19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.10"
django-filter = "^24.3"
faker = "^30.8.2"
django-cors-headers = "^4.6.0"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
django-stubs = "^5.1.1"
mypy = "^1.13.0"
djangorestframework-stubs = "^3.15.1"
django-filter-stubs = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
